--- a/socialslide/index.html
+++ b/socialslide/index.html
@@ -48,7 +48,7 @@
             <div class="slide active" id="slide2">
                 <a href="https://huygenz.github.io/huygenz" target="_blank">
                     <p><h1>Besuche mich auf GitHub.</h1></p>
-                    <img data-src="http://t3kurs.eu/fileadmin/user_upload/Phil/Octocat.png" />
+                    <img data-src="img/octocat.png" />
                     <p style="color: #444444">Nicht viel, aber ein bisschen.</p>
                 </a>
                 <p style="font-size: 12px; color: #444444">⫷ Du kannst hier nach links oder rechts scrollen ⫸</p>
